# ps.cpp

./: .gitignore  CMakeLists.txt  Core.h  Cpp.code-workspace  Geometry.h  LICENSE  Polygon.h  Project1.sln  README(ENG).md  README.md  String.h  Template.code-workspace  build  build.sh  build_cmake.sh  chain.cpp  cpp.code-workspace  cppvimrc  diff.txt  envset  gen.cpp  goorm.manifest  in  main.cpp  memo  memo.txt  package.json  pyvimrc  requirements.txt  submit.py  test1.sh  tester.sh  testtc.sh  tpl.cpp  tpl.py  tpl_debug.cpp  tpl_scpc.cpp  tplscpc.cpp
.github/workflows/: main.yml
Examples/: (BOJ_10504).cpp  (BOJ_17138).cpp  Binomial(BOJ-11401).cpp  ConvexHull(BOJ-1708).cpp  ConvexIntersection(BOJ-1077).cpp  Dijikstra2(BOJ-1719).cpp  Dijkstra(BOJ-1719).cpp  Dijkstra(BOJ-1753).cpp  Dijkstra1(BOJ-1753).cpp  Dijkstra2(BOJ-1719).cpp  DisjointSet&SegmentIntersectDet(BOJ-2162).cpp  FenwickTree(BOJ-1280).cpp  FenwickTree1(BOJ-1280).cpp  Floyd(BOJ-2660).cpp  Fractional(CF-1077D).cpp  HLD(BOJ-13512).cpp  HLD(BOJ_17033).cpp  HLD1(BOJ-13510).cpp  HLD2(BOJ-13512).cpp  HelloWorld.cpp  KMP(BOJ-1786).cpp  LCA(BOJ-11438).cpp  MCMF&OptimalSolution(BOJ-9577).cpp  MCMF(BOJ-11405).cpp  Matrix&FastPow(BOJ-13328).cpp  MaximumFlow(BOJ-11375).cpp  MergeSortTree(BOJ-13544).cpp  ModNum(BOJ-11401).cpp  MonotonicQ(BOJ-11003).cpp  PST(BOJ_16978).cpp  PST(CF-961E).cpp  PST(CF_961E).cpp  PerpendicularFoot(BOJ-11563).cpp  README.md  SCC&2SAT(BOJ-11281).cpp  SegLazy(BOJ-10713).cpp  SegLazy(BOJ_3002).cpp  SegPers(BOJ_16978).cpp  SegPers(CF_961E).cpp  SegTree(BOJ-11505).cpp  (+14 more)
Includes/: Core.h  CumulQ.h  DPOpt.h  DirectedGraph.h  DisjointSet.h  DynamicTree.h  FFT.h  FastIO.h  FastIOSimple.h  Fenwick.h  FlowGraph.h  Frac.h  GccExts.h  Graph.h  HLD.h  LCA.h  Line.h  List.h  Matrix.h  MergeSortTree.h  Mod.h  ModNum.h  MonotonicQ.h  Multixet.h  NumberTheory.h  PST.h  PSTLazy.h  Pair.h  Polygon.h  README(ENG).md  README.md  Range.h  Rect.h  RegularNumber.h  RootedTree.h  Seg.h  SegBU.h  SegCommutative.h  SegLazy.h  SegLazyDyn.h  (+22 more)
Project1/: Algorithms.h  Core.h  DisjointSet.h  Frac.h  Geometry.h  Graph.h  Line.h  Matrix.h  ModNum.h  NumberTheory.h  Polygon.h  Project1.vcxproj  Project1.vcxproj.filters  Rect.h  Segment.h  SegmentTree.h  Source.cpp  String.h  Vec2.h  main.cpp  output.cpp
Project1/Examples/: ConvexHull(BOJ-1708).cpp  ConvexIntersection(BOJ-1077).cpp  DisjointSet&SegmentIntersectDet(BOJ-2162).cpp  Fractional(CF-1077D).cpp  MCMF&OptimalSolution(BOJ-9577).cpp  MCMF(BOJ-11405).cpp  MaximumFlow(BOJ-11375).cpp  PerpendicularFoot(BOJ-11563).cpp  SegmentIntersect&MaximumFlow(BOJ-14750).cpp  SegmentTree1(BOJ-1280).cpp  SegmentTree2(BOJ-10713).cpp  SegmentTree3(BOJ-11505).cpp  TopologicalSort(BOJ-2623).cpp
Project1/bits/: stdc++.h
Tools/: merger.cpp  xcuter.cpp
example/: ConvexHull(BOJ-1708).cpp  CumulQ(BOJ_14525).cpp  Dijkstra(BOJ-1753).cpp  FenwickTree(BOJ-1280).cpp  Floyd(BOJ-2660).cpp  Fractional(CF-1077D).cpp  HLD(BOJ-13510).cpp  LCA(BOJ-13511).cpp  LinAlge(AC189E).cpp  Matrix&FastPow(BOJ-13328).cpp  MaximumFlow(BOJ-11375).cpp  MergeSortTree(BOJ-13544).cpp  MonotonicQ(BOJ-11003).cpp  README.md  SCC&2SAT(BOJ-11281).cpp  SegPers(BOJ_16978).cpp  SplayTree(BOJ-13159).cpp  TopologicalSort(BOJ-2623).cpp
examples/: ConvexIntersection(BOJ-1077).cpp  Dijkstra(BOJ-1719).cpp  DisjointSet&SegmentIntersectDet(BOJ-2162).cpp  Floyd(BOJ-2660).cpp  HLD(BOJ-13510).cpp  HLD(BOJ-13512).cpp  HLD(BOJ-15060).cpp  HLD(BOJ_17033).cpp  KMP(BOJ-1786).cpp  LCA(BOJ-11438).cpp  MCMF&OptimalSolution(BOJ-9577).cpp  MatRREF(BOJ_13965).cpp  Matrix&FastPow(BOJ-13328).cpp  MaximumFlow(BOJ-11375).cpp  MergeSortTree(BOJ-13544).cpp  ModNum(BOJ-11401).cpp  MonotonicQ(BOJ-11003).cpp  PerpendicularFoot(BOJ-11563).cpp  SegmentIntersect&MaximumFlow(BOJ-14750).cpp  SplayTree(BOJ-13159).cpp  SplayTree(BOJ-13543).cpp  SplayTree(BOJ-3444).cpp  Xset(CF-961E).cpp  defer.cpp
incl/: Ahocorasik.h  Bag.h  BerlekampMassey.h  Bipartite.h  Bucket.h  BucketBias.h  CArr.h  Config.h  Core.h  CoreMin.h  Counter.h  CumulQ.h  DPOpt.h  DST.h  DSTLazy.h  Debug.h  DirGraph.h  FFT.h  FastIO.h  Fenwick.h  Flow.h  Frac.h  Functional.h  GccExts.h  Graph.h  GraphUD.h  GraphUU.h  GraphWD.h  GraphWU.h  HLD.h  HashVal.h  HeapSet.h  Hungarian.h  IO.h  Int128.h  LCA.h  LinAlge.h  LinAlgeGF2.h  LinRec.h  Line.h  (+43 more)
incl/core/: abbr.h  arr.h  base.h  config.h  consts.h  debug.h  fastio.h  func.h  func1.h  func2.h  funcext.h  io.h  monoid.h  pq.h  prerun.h  prettyio.h  std.h
incl/dp/: cht.h  dnc.h  dpopt.h  knapsack.h  knuth.h  monge.h  slope.h  sparse.h  sparse2d.h
incl/geom/: circle.h  line.h  polygon.h  rect.h  segment.h  vec2.h
incl/graph/: UD.h  UU.h  WD.h  WU.h  bipartite.h  flow.h  funcional.h  functional.h  memo  permutation.h
incl/math/: lp.h  (+16 more)
includes/: Bag.h  Bipartite.h  Carr.h  Core.h  Core11.h  DPOpt.h  DirGraph.h  DirectedGraph.h  FastIO.h  Fenwick.h  Flow.h  FlowGraph.h  GccExts.h  Graph.h  HashVal.h  Mat.h  Mod.h  MonotonicQ.h  Polygon.h  README.md  RootedTree.h  Seg.h  Seg2D.h  SegBU.h  SegLazy.h  SegLazyDyn.h  SegPers.h  SimpleGraph.h  String.h  Tree.h  UnionFind.h  Xarr.h
libpy/: fenwick.py  fft_bigint.py  number_theory.py
py/: fft.py  tpl.py
src/: a.cpp  b.cpp  c.cpp  d.cpp  dd.cpp  e.cpp  f.cpp  g.cpp  main.cpp  testcompile.cpp  tpl.cpp  tplmin.cpp
test/: 1.sh  2.sh  compile.cpp  compile.sh  mongetest.cpp  stress.sh  tc.sh
tool/: build.sh  build_cmake.sh  build_legacy.sh  compile_test.cpp  compile_test.sh  exec.sh  stress.sh  tc.sh  tcsaver.js
tools/: README.md  build.sh  compile_test.cpp  merger.cpp
(+131 files in other folders)
